# trashnet

./: .gitattributes  .gitignore  .secrets.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd-latest-ver.yml  cd-tag-ver.yml  cd.yml  ci.yml
models/: README.md
models/model_1.0/: config.json  metrics.json
models/model_1.1/: README.md  config.json  metrics.json  model_1.1.pth
models/model_1.2/: README.md  config.json  metrics.json
models/model_1.3/: config.json  metrics.json
models/trashnet_v1.3/: README.md
notebooks/: baseline.ipynb  cnn_custom.ipynb  cnn_tensorflow.ipynb  cnn_torch.ipynb  dataset-analysis.ipynb
scripts/: push_to_hf.py  train_script.py
src/: __init__.py  analysis.py  augmentation.py  data_loader.py  layer.py  logger.py  tf_model.py  torch_model.py
src/scratch/: layer.py  model.py  optimizer.py
test/: integration_test.py  integration_test_torch.py
