[project]
name = "trashnet-classification"
version = "0.1.0"
description = "A classification model for trashnet dataset"
requires-python = ">=3.12"

dependencies = [
    "torch",
    "torchvision",
    "torchmetrics",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "wandb",
    "huggingface-hub",
]

